@@ -10,6 +10,9 @@ What's New in Python 3.7.0 alpha 1?
 Core and Builtins
 -----------------
 
+- bpo-24340: Fixed a "leak" in the computation of the stack size effect for
+  try/except and try/finally.
+
 - bpo-31161: Make sure the 'Missing parentheses' syntax error message is
   only applied to SyntaxError, not to subclasses. Patch by Martijn Pieters.
 
